Fixed cryptowatch issue

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -235,6 +235,18 @@
     "\n",
     "## Part 3: Interacting with data\n",
     "\n",
+    "---\n",
+    "\n",
+    "<p style=\"color:red;font-weight:bold;font-size:36px\">WARNING: API changed. Read below for more details:</p>\n",
+    "\n",
+    "<p style=\"color:red;font-weight:bold;\">The original notebook of this tutorial used the Cryptowatch API to dynamically extract information about cryptocurrency prices. This tutorial was created in 2018, and since then, Kraken (the exchange) acquired cryptowatch and shut down their API (<a href=\"https://blog.kraken.com/product/cryptowatch-to-sunset-kraken-pro-to-integrate-cryptowatch-features\">read more here</a>).</p>\n",
+    "\n",
+    "<p style=\"color:red;font-weight:bold;\">I have now migrated the Cryptowatch API to Kraken's API, so the functionality is THE SAME, but of course this doesn't match what's explained in the video.</p>\n",
+    "\n",
+    "<p style=\"color:red;font-weight:bold;\">The rest of the notebook remains untouched:</p>\n",
+    "\n",
+    "---\n",
+    "\n",
     "Notebooks.ai and Jupyter Lab make it really simple to intereact with files in your local storage. These files are securely stored in the cloud and you can access them from anywhere in the world.\n",
     "\n",
     "To show you the full potential of Notebooks.ai, we're going to pull cryptocurrencies prices from a public API and download them as Excel files, pretty fancy 😎. I need to import two libraries first: `requests` (to pull data from the web) and `pandas` to process it."
@@ -251,29 +263,33 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I have a predefined function that simplifies the process of importing data from [Cryptowatch](https://cryptowat.ch) (for reference, check [their docs](https://cryptowat.ch/docs/api#ohlc))."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_historic_price(symbol, exchange='bitfinex', after='2018-09-01'):\n",
-    "    url = 'https://api.cryptowat.ch/markets/{exchange}/{symbol}usd/ohlc'.format(\n",
-    "        symbol=symbol, exchange=exchange)\n",
+    "def get_historic_price(symbol, after='2018-09-01'):\n",
+    "    \n",
+    "    url = 'https://api.kraken.com/0/public/OHLC'\n",
+    "    pair = f\"{symbol.upper()}USD\" # XBTUSD when symbol='xbt' for example\n",
+    "    \n",
     "    resp = requests.get(url, params={\n",
-    "        'periods': '3600',\n",
-    "        'after': str(int(pd.Timestamp(after).timestamp()))\n",
+    "        \"pair\": pair,\n",
+    "        'interval': 60,\n",
+    "        'since': str(int(pd.Timestamp(after).timestamp()))\n",
     "    })\n",
     "    resp.raise_for_status()\n",
+    "    \n",
     "    data = resp.json()\n",
-    "    df = pd.DataFrame(data['result']['3600'], columns=[\n",
-    "        'CloseTime', 'OpenPrice', 'HighPrice', 'LowPrice', 'ClosePrice', 'Volume', 'NA'\n",
+    "    \n",
+    "    results_key = [k for k in data['result'].keys() if k != 'last'][0]\n",
+    "    results = [\n",
+    "        (close_time, float(open), float(high), float(low), float(close), float(volume))\n",
+    "        for (close_time, open, high, low, close, vwap, volume, count)\n",
+    "        in data['result'][results_key]\n",
+    "    ]\n",
+    "    df = pd.DataFrame(results, columns=[\n",
+    "        'CloseTime', 'OpenPrice', 'HighPrice', 'LowPrice', 'ClosePrice', 'Volume'\n",
     "    ])\n",
     "    df['CloseTime'] = pd.to_datetime(df['CloseTime'], unit='s')\n",
     "    df.set_index('CloseTime', inplace=True)\n",
@@ -303,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "btc = get_historic_price('btc', 'bitstamp', after=last_week)"
+    "btc = get_historic_price('btc', after=last_week)"
    ]
   },
   {
@@ -312,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eth = get_historic_price('eth', 'bitstamp', after=last_week)"
+    "eth = get_historic_price('eth', after=last_week)"
    ]
   },
   {
@@ -329,6 +345,15 @@
    "outputs": [],
    "source": [
     "btc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "btc.info()"
    ]
   },
   {
@@ -535,7 +560,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -549,9 +574,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
